created basic cards

--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
 <body>
   
   <div id="main">
-    <div class="card">
-      <p id="card-text">Hello World!</p>
+
+    <div id="card-holder">
+      <div class="card">
+        <p id="card-text">LeetCode Timer</p>
+        <div class="timer-clicker"></div>
+      </div>
+
+      <div class="card">
+        <p id="card-text">Documentation Reading</p>
+        <div class="timer-clicker"></div>
+      </div>
+
+      <div class="card">
+        <p id="card-text">Personal Project Work Timer</p>
+        <div class="timer-clicker"></div>
+      </div>
+
     </div>
+
   </div>
 
   <script src="./script.js"></script>
