added basic styling for cards and classes where needed in html

--- a/index.html
+++ b/index.html
@@ -9,23 +9,31 @@
 <body>
   
   <div id="main">
+    <div id="card-section">
 
-    <div id="card-holder">
-      <div class="card">
-        <p id="card-text">LeetCode Timer</p>
-        <div class="timer-clicker"></div>
+      <div id="card-holder">
+        <div class="card">
+          <p class="card-text">LeetCode Timer</p>
+          <div class="timer-clicker">
+            <p class="timer-text">Start</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <p class="card-text">Personal Project Work Timer</p>
+          <div class="timer-clicker">
+            <p class="timer-text">Start</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <p class="card-text">Documentation Reading</p>
+          <div class="timer-clicker">
+            <p class="timer-text">Start</p>
+          </div>
+        </div>
+
       </div>
-
-      <div class="card">
-        <p id="card-text">Documentation Reading</p>
-        <div class="timer-clicker"></div>
-      </div>
-
-      <div class="card">
-        <p id="card-text">Personal Project Work Timer</p>
-        <div class="timer-clicker"></div>
-      </div>
-
     </div>
 
   </div>
