--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>75Code</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <nav id="nav-bar">
+    <li id="page-title">
+      <h1 id="title-text">75Code</h1>
+    </li>
+    <li id="length-of-days">
+      0 Days
+    </li>
+  </nav>
   
   <div id="main">
+
     <div id="card-section">
 
       <div id="card-holder">
