Added header to cards with further info

--- a/index.html
+++ b/index.html
@@ -26,21 +26,30 @@
 
       <div id="card-holder">
         <div class="card">
-          <p class="card-text">LeetCode Timer</p>
+          <div class="card-header">
+            <p class="card-header-text">LeetCode Timer</p>
+            <p class="timer-length">30 min</p>
+          </div>
           <div class="timer-clicker">
             <p class="timer-text">Start</p>
           </div>
         </div>
 
         <div class="card">
-          <p class="card-text">Personal Project Work Timer</p>
+          <div class="card-header">
+            <p class="card-header-text">Personal Project Work Timer</p>
+            <p class="timer-length">1 Hour</p>
+          </div>
           <div class="timer-clicker">
             <p class="timer-text">Start</p>
           </div>
         </div>
 
         <div class="card">
-          <p class="card-text">Documentation Reading</p>
+          <div class="card-header">
+            <p class="card-header-text">Documentation Reading</p>
+            <p class="timer-length">30 min</p>
+          </div>
           <div class="timer-clicker">
             <p class="timer-text">Start</p>
           </div>
