--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+  <link id="favicon" rel="icon" href="./assets/coding-svgrepo-com.svg" type="image/x-icon"/>
 </head>
 <body>
   <nav id="nav-bar">
