changed timer length from 1 hr to 60 min for uniformity

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="card">
           <div class="card-header">
             <p class="card-header-text">Personal Project Work Timer</p>
-            <p class="timer-length">1 Hour</p>
+            <p class="timer-length">60 min</p>
           </div>
           <div class="timer-clicker">
             <p class="timer-text">Start</p>
