Added timer-display divs to each card

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
           <div class="timer-clicker">
             <p class="timer-text">Start</p>
           </div>
+
+          <div class="timer-display">
+            <p class="timer-time"></p>
+          </div>
         </div>
 
         <div class="card">
@@ -45,6 +49,10 @@
           <div class="timer-clicker">
             <p class="timer-text">Start</p>
           </div>
+
+          <div class="timer-display">
+            <p class="timer-time"></p>
+          </div>
         </div>
 
         <div class="card">
@@ -54,6 +62,10 @@
           </div>
           <div class="timer-clicker">
             <p class="timer-text">Start</p>
+          </div>
+
+          <div class="timer-display">
+            <p class="timer-time"></p>
           </div>
         </div>
 
