Seperated number from string days to be able to change num only in js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <h1 id="title-text">75Code</h1>
     </li>
     <li id="length-of-days">
-      0 Days
+      <p id="day-counter" class="inline">0</p>
+      <p class="inline">Days</p>
     </li>
   </nav>
   
