--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>75Code</title>
+  <title>const.</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
+
   <link id="favicon" rel="icon" href="./assets/coding-svgrepo-com.svg" type="image/x-icon"/>
 </head>
 <body>
   <nav id="nav-bar">
     <li id="page-title">
-      <h1 id="title-text">75Code</h1>
+      <h1 id="title-text">const.</h1>
     </li>
     <li id="length-of-days">
       <p id="day-counter" class="inline">0</p>
@@ -33,7 +37,7 @@
         <div class="card">
           <div class="card-header">
             <p class="card-header-text">LeetCode Timer</p>
-            <p class="timer-length">30 min</p>
+            <p class="timer-length">60 min</p>
           </div>
           <div class="timer-clicker">
             <p class="timer-text">Start</p>
