--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div class="card">
           <div class="card-header">
-            <p class="card-header-text">Documentation Reading</p>
+            <p id='study-header' class="card-header-text">Study</p>
             <p class="timer-length">30 min</p>
           </div>
           <div class="timer-clicker">
